# labela

./: .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  config.json  config.py  docker-compose.yml  get_project_structure.py  image_captioner.py  prompts.json  pyproject.toml  settings.json  start_unix.sh  start_windows.bat
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/services/: caption_service.py  settings_service.py
backend/app/services/providers/: __init__.py  base_provider.py  huggingface_provider.py  openai_provider.py
captioner/: base_captioner.py  captioner_factory.py  huggingface_captioner.py  idefics_captioner.py  openai_api_captioner.py
example_images/: example_image.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/batch_processing/: BatchProcessingView.tsx  FolderSelect.tsx  LiveFeed.tsx  ProcessedGallery.tsx  QuickReview.tsx  StatusSection.tsx
frontend/src/components/generator/: ChatPreview.tsx  ExamplePreviewModal.tsx  ExampleUploadModal.tsx  ExamplesPanel.tsx  GeneratorView.tsx  PreviewPanel.tsx  PromptPanel.tsx  PromptTemplateModal.tsx  TestPanel.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/types/: gpt-tokenizer.d.ts
static/: script.js  styles.css
static/css/: buttons.css  console.css  forms.css  layout.css  main.css  modals.css  utilities.css
static/js/: main.js
static/js/modules/: captioner.js  models.js  settings.js  shutdown.js  technique.js
templates/: index.html
(+8 files in other folders)
